dash/frontend/src/app/modules/private/pages/image/image-scan-result/image-scan-result.component.scss
.scanner-error {
  width: 99.5%;
  margin-bottom: 10px;
  border: red 1px solid;
  background: white;
  text-transform: capitalize;

  .error-msg {
    padding: 0 10px 10px;
  }
}

.image-scan-list {
  flex: 3;
  width: 99.5%;
  padding-bottom: 20px;

  > mat-toolbar {
    padding-bottom: 10px;
    @media all and (max-width: 850px) {
      height: fit-content;
      display: flex;
      flex-direction: column;
      flex-wrap: wrap;
      //padding-bottom: 80px;
    }

    .mat-toolbar-row {
      width: 100%;
      flex-wrap: wrap;
      padding-left: 0;

      &.image-id-row {
        height: 20%;
        font-weight: normal;
        font-size: 15px;
      }

      .col-lg-9 {
        align-items: center;
        display: flex;
        min-width: 0px;
      }

      .col-lg-2 {
        display: flex;
        margin-left: auto;
        padding: 0px;
        flex-basis: auto;
      }
    }
  }

  .image-details {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    @media all and (max-width: 1186px) {
      overflow-x: scroll;
    }

    .left-elements {
      display: flex;
      flex-direction: row;

      .elements {
        display: flex;
        flex-direction: column;
        margin: 10px 50px 0 15px;

        .first-element-content {
          color: green;
        }
      }
    }

    .right-elements {
      display: flex;
      flex-direction: row;

      .elements {
        align-items: center;
        display: flex;
        flex-direction: column;
        margin: 10px 30px 0 15px;
      }
    }
  }
}

.image-scan-result-list {
  padding-bottom: 20px;
  flex: 3;
  width: 99.5%;

  > mat-toolbar {
    @media all and (max-width: 850px) {
      display: flex;
      flex-direction: column;
    }

    .image-subnav-title {
      @media all and (max-width: 850px) {
        width: 250px;
        white-space: nowrap;
      }
      @media all and (max-width: 377px) {
        width: 100px;
        white-space: nowrap;
      }
    }
  }

  div.mat-elevation-z8 {
    overflow-x: auto;
    @media all and (max-width: 685px) {
      overflow-x: scroll;
    }
  }
}

.issues-list {
  width: 99.5%;
  // try setting min widths with percentages
  .mat-column-scanner {
    width: 10%;
    padding-right: 5px;
  }

  .mat-column-scanner_name {
    width: 60%;
    padding-right: 5px;
  }

  .mat-column-severity {
    width: 5%;
    padding-right: 5px;
  }

  .mat-column-type {
    width: 15%;
    padding-right: 5px;
  }

  .mat-column-required_for_compliance {
    width: 5%;
  }

  .mat-column-is_fixable {
    width: 5%;
  }

  div.mat-elevation-z8 {
    overflow-x: auto;
    @media all and (max-width: 685px) {
      overflow-x: scroll;
    }
  }

}

.advanced-search {
  flex: 1 1 auto;
  text-align: end;
}

mat-icon-button {
  margin-left: 5px;
}

.mr-15px {
  margin-right: 15px;
}

/*TODO(mdc-migration): The following rule targets internal classes of paginator that may no longer apply for the MDC version.*/
mat-paginator {
  padding-top: 10px;
}

.pad-left-20 {
  padding-left: 20px;
}

.pad-right-5 {
  padding-right: 5px;
}


.type-margin {
  margin-top: 24px;

}

.request-exception-button {
  display: inline-block;
  white-space: nowrap;
  text-decoration: none;
  vertical-align: baseline;
  text-align: center;
  margin: 0;
  min-width: 64px;
  line-height: 36px;
}

